@@ -32,6 +32,7 @@ import java.util.stream.Stream;
 
 import org.fenixedu.academic.domain.exceptions.DomainException;
 import org.fenixedu.bennu.core.domain.Bennu;
+import org.fenixedu.commons.i18n.I18N;
 import org.fenixedu.commons.i18n.LocalizedString;
 
 public class ProfessionTimeType extends ProfessionTimeType_Base implements Comparable<ProfessionTimeType> {
@@ -75,7 +76,7 @@ public class ProfessionTimeType extends ProfessionTimeType_Base implements Compa
     }
 
     public String getLocalizedName() {
-        return getLocalizedName(Locale.getDefault());
+        return getLocalizedName(I18N.getLocale());
     }
 
     public String getLocalizedName(Locale locale) {
