@@ -33,6 +33,7 @@ import java.util.stream.Stream;
 
 import org.fenixedu.academic.domain.exceptions.DomainException;
 import org.fenixedu.bennu.core.domain.Bennu;
+import org.fenixedu.commons.i18n.I18N;
 import org.fenixedu.commons.i18n.LocalizedString;
 
 public class ResidenceType extends ResidenceType_Base implements Comparable<ResidenceType> {
@@ -91,7 +92,7 @@ public class ResidenceType extends ResidenceType_Base implements Comparable<Resi
     }
 
     public String getLocalizedName() {
-        return getLocalizedName(Locale.getDefault());
+        return getLocalizedName(I18N.getLocale());
     }
 
     public String getLocalizedName(Locale locale) {
