@@ -34,6 +34,7 @@ import java.util.stream.Stream;
 
 import org.fenixedu.academic.domain.exceptions.DomainException;
 import org.fenixedu.bennu.core.domain.Bennu;
+import org.fenixedu.commons.i18n.I18N;
 import org.fenixedu.commons.i18n.LocalizedString;
 
 public class SalarySpan extends SalarySpan_Base implements Comparable<SalarySpan> {
@@ -92,7 +93,7 @@ public class SalarySpan extends SalarySpan_Base implements Comparable<SalarySpan
     }
 
     public String getLocalizedName() {
-        return getLocalizedName(Locale.getDefault());
+        return getLocalizedName(I18N.getLocale());
     }
 
     public String getLocalizedName(Locale locale) {
