@@ -35,6 +35,7 @@ import java.util.stream.Stream;
 
 import org.fenixedu.academic.domain.exceptions.DomainException;
 import org.fenixedu.bennu.core.domain.Bennu;
+import org.fenixedu.commons.i18n.I18N;
 import org.fenixedu.commons.i18n.LocalizedString;
 
 public class UniversityChoiceMotivationAnswer extends UniversityChoiceMotivationAnswer_Base
@@ -82,7 +83,7 @@ public class UniversityChoiceMotivationAnswer extends UniversityChoiceMotivation
     }
 
     public String getLocalizedName() {
-        return getLocalizedName(Locale.getDefault());
+        return getLocalizedName(I18N.getLocale());
     }
 
     public String getLocalizedName(Locale locale) {
