@@ -33,6 +33,7 @@ import java.util.stream.Stream;
 
 import org.fenixedu.academic.domain.exceptions.DomainException;
 import org.fenixedu.bennu.core.domain.Bennu;
+import org.fenixedu.commons.i18n.I18N;
 import org.fenixedu.commons.i18n.LocalizedString;
 
 public class UniversityDiscoveryMeansAnswer extends UniversityDiscoveryMeansAnswer_Base
@@ -77,7 +78,7 @@ public class UniversityDiscoveryMeansAnswer extends UniversityDiscoveryMeansAnsw
     }
 
     public String getLocalizedName() {
-        return getLocalizedName(Locale.getDefault());
+        return getLocalizedName(I18N.getLocale());
     }
 
     public String getLocalizedName(Locale locale) {
