@@ -1,3 +1,5 @@
+- Bug fix: Use correct locale on blue record entities description
+
 6.25.7 (18-08-2021)
 - Bug fix: Show all service request from a student if searching with a number
 
